# unix-exec-output-catcher

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: child.rs  error.rs  exec.rs  lib.rs  libc_util.rs  pipe.rs  reader.rs
tests/: mixed_stdout_stderr_test.rs  run_mixed_stdout_stderr_test.rs
